web-infras/parser/tests/fixtures/esprima/ES6/arrow-function/non-arrow-param-followed-by-rest/output.txt
[SyntaxError]: Invalid parenthesized assignment pattern. (1,3)
1|((a),...b) => 0;
 | ^
